--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.10.1",
+    "react-medium-image-zoom": "^5.1.8",
     "react-responsive": "^9.0.2",
+    "swiper": "^8.4.5",
     "tailwindcss": "3.3.2",
     "typescript": "5.1.6",
     "yarn": "^1.22.19"
